// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render itself 1`] = `
<ChangePasswordPage
  alerts={[]}
  lostPasswordToken="foo"
  url="foo/bar"
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    loginTitle="Change Password"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Change Password"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Change Password
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Form
                  acceptCharset="UTF-8"
                  action="foo/bar"
                  id="edit_user_2"
                  method="post"
                  noValidate={true}
                >
                  <FormBase
                    acceptCharset="UTF-8"
                    action="foo/bar"
                    id="edit_user_2"
                    innerRef={null}
                    method="post"
                    noValidate={true}
                  >
                    <form
                      acceptCharset="UTF-8"
                      action="foo/bar"
                      className="pf-c-form"
                      id="edit_user_2"
                      method="post"
                      noValidate={true}
                    >
                      <LoginAlert>
                        <Alert
                          className="invisible"
                          isInline={true}
                          variant="default"
                        >
                          <div
                            aria-label="Default Alert"
                            className="pf-c-alert pf-m-inline invisible"
                            data-ouia-component-id="OUIA-Generated-Alert-default-1"
                            data-ouia-component-type="PF4/Alert"
                            data-ouia-safe={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <AlertIcon
                              variant="default"
                            >
                              <div
                                className="pf-c-alert__icon"
                              >
                                <BellIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 896 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                                    />
                                  </svg>
                                </BellIcon>
                              </div>
                            </AlertIcon>
                            <h4
                              className="pf-c-alert__title"
                            >
                              <span
                                className="pf-u-screen-reader"
                              >
                                Default alert:
                              </span>
                            </h4>
                          </div>
                        </Alert>
                      </LoginAlert>
                      <input
                        name="_method"
                        type="hidden"
                        value="put"
                      />
                      <input
                        name="utf8"
                        type="hidden"
                        value="✓"
                      />
                      <CSRFToken>
                        <input
                          name="mocked-csrf-param"
                          type="hidden"
                          value="mocked-csrf-token"
                        />
                      </CSRFToken>
                      <FormGroup
                        autoComplete="off"
                        fieldId="user_password"
                        helperTextInvalid="Password is mandatory"
                        isRequired={true}
                        label="Password"
                        validated="default"
                      >
                        <GenerateId
                          prefix="pf-random-id-"
                        >
                          <div
                            autoComplete="off"
                            className="pf-c-form__group"
                          >
                            <div
                              className="pf-c-form__group-label"
                            >
                              <label
                                className="pf-c-form__label"
                                htmlFor="user_password"
                              >
                                <span
                                  className="pf-c-form__label-text"
                                >
                                  Password
                                </span>
                                <span
                                  aria-hidden="true"
                                  className="pf-c-form__label-required"
                                >
                                   
                                  *
                                </span>
                              </label>
                               
                            </div>
                            <div
                              className="pf-c-form__group-control"
                            >
                              <TextInput
                                autoComplete="off"
                                autoFocus={true}
                                id="user_password"
                                isRequired={true}
                                name="user[password]"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="password"
                                validated="default"
                                value=""
                              >
                                <TextInputBase
                                  aria-label={null}
                                  autoComplete="off"
                                  autoFocus={true}
                                  className=""
                                  id="user_password"
                                  innerRef={null}
                                  isDisabled={false}
                                  isIconSprite={false}
                                  isLeftTruncated={false}
                                  isReadOnly={false}
                                  isRequired={true}
                                  name="user[password]"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  ouiaSafe={true}
                                  type="password"
                                  validated="default"
                                  value=""
                                >
                                  <input
                                    aria-invalid={false}
                                    aria-label={null}
                                    autoComplete="off"
                                    autoFocus={true}
                                    className="pf-c-form-control"
                                    data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                                    data-ouia-component-type="PF4/TextInput"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    id="user_password"
                                    name="user[password]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={true}
                                    type="password"
                                    value=""
                                  />
                                </TextInputBase>
                              </TextInput>
                            </div>
                          </div>
                        </GenerateId>
                      </FormGroup>
                      <FormGroup
                        autoComplete="off"
                        fieldId="user_password_confirmation"
                        helperTextInvalid="Password confirmation is mandatory"
                        isRequired={true}
                        label="Password confirmation"
                        validated="default"
                      >
                        <GenerateId
                          prefix="pf-random-id-"
                        >
                          <div
                            autoComplete="off"
                            className="pf-c-form__group"
                          >
                            <div
                              className="pf-c-form__group-label"
                            >
                              <label
                                className="pf-c-form__label"
                                htmlFor="user_password_confirmation"
                              >
                                <span
                                  className="pf-c-form__label-text"
                                >
                                  Password confirmation
                                </span>
                                <span
                                  aria-hidden="true"
                                  className="pf-c-form__label-required"
                                >
                                   
                                  *
                                </span>
                              </label>
                               
                            </div>
                            <div
                              className="pf-c-form__group-control"
                            >
                              <TextInput
                                autoComplete="off"
                                id="user_password_confirmation"
                                isRequired={true}
                                name="user[password_confirmation]"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="password"
                                validated="default"
                                value=""
                              >
                                <TextInputBase
                                  aria-label={null}
                                  autoComplete="off"
                                  className=""
                                  id="user_password_confirmation"
                                  innerRef={null}
                                  isDisabled={false}
                                  isIconSprite={false}
                                  isLeftTruncated={false}
                                  isReadOnly={false}
                                  isRequired={true}
                                  name="user[password_confirmation]"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  ouiaSafe={true}
                                  type="password"
                                  validated="default"
                                  value=""
                                >
                                  <input
                                    aria-invalid={false}
                                    aria-label={null}
                                    autoComplete="off"
                                    className="pf-c-form-control"
                                    data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                                    data-ouia-component-type="PF4/TextInput"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    id="user_password_confirmation"
                                    name="user[password_confirmation]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={true}
                                    type="password"
                                    value=""
                                  />
                                </TextInputBase>
                              </TextInput>
                            </div>
                          </div>
                        </GenerateId>
                      </FormGroup>
                      <input
                        id="password_reset_token"
                        name="password_reset_token"
                        type="hidden"
                        value="foo"
                      />
                      <ActionGroup>
                        <div
                          className="pf-c-form__group pf-m-action"
                        >
                          <div
                            className="pf-c-form__group-control"
                          >
                            <div
                              className="pf-c-form__actions"
                            >
                              <Button
                                isBlock={true}
                                isDisabled={true}
                                type="submit"
                                variant="primary"
                              >
                                <ButtonBase
                                  innerRef={null}
                                  isBlock={true}
                                  isDisabled={true}
                                  type="submit"
                                  variant="primary"
                                >
                                  <button
                                    aria-disabled={true}
                                    aria-label={null}
                                    className="pf-c-button pf-m-primary pf-m-block pf-m-disabled"
                                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={true}
                                    role={null}
                                    tabIndex={null}
                                    type="submit"
                                  >
                                    Change Password
                                  </button>
                                </ButtonBase>
                              </Button>
                            </div>
                          </div>
                        </div>
                      </ActionGroup>
                    </form>
                  </FormBase>
                </Form>
              </div>
            </LoginMainBody>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</ChangePasswordPage>
`;

exports[`should render with server side errors when present 1`] = `
<ChangePasswordPage
  alerts={
    [
      {
        "message": "Ooops!",
        "type": "danger",
      },
    ]
  }
  lostPasswordToken="foo"
  url="foo/bar"
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    loginTitle="Change Password"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Change Password"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Change Password
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Form
                  acceptCharset="UTF-8"
                  action="foo/bar"
                  id="edit_user_2"
                  method="post"
                  noValidate={true}
                >
                  <FormBase
                    acceptCharset="UTF-8"
                    action="foo/bar"
                    id="edit_user_2"
                    innerRef={null}
                    method="post"
                    noValidate={true}
                  >
                    <form
                      acceptCharset="UTF-8"
                      action="foo/bar"
                      className="pf-c-form"
                      id="edit_user_2"
                      method="post"
                      noValidate={true}
                    >
                      <LoginAlert
                        message="Ooops!"
                        type="danger"
                      >
                        <Alert
                          className=""
                          isInline={true}
                          title={
                            [
                              <p>
                                Ooops!
                              </p>,
                            ]
                          }
                          variant="danger"
                        >
                          <div
                            aria-label="Danger Alert"
                            className="pf-c-alert pf-m-inline pf-m-danger"
                            data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                            data-ouia-component-type="PF4/Alert"
                            data-ouia-safe={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <AlertIcon
                              variant="danger"
                            >
                              <div
                                className="pf-c-alert__icon"
                              >
                                <ExclamationCircleIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                    />
                                  </svg>
                                </ExclamationCircleIcon>
                              </div>
                            </AlertIcon>
                            <h4
                              className="pf-c-alert__title"
                            >
                              <span
                                className="pf-u-screen-reader"
                              >
                                Danger alert:
                              </span>
                              <p
                                key="0"
                              >
                                Ooops!
                              </p>
                            </h4>
                          </div>
                        </Alert>
                      </LoginAlert>
                      <input
                        name="_method"
                        type="hidden"
                        value="put"
                      />
                      <input
                        name="utf8"
                        type="hidden"
                        value="✓"
                      />
                      <CSRFToken>
                        <input
                          name="mocked-csrf-param"
                          type="hidden"
                          value="mocked-csrf-token"
                        />
                      </CSRFToken>
                      <FormGroup
                        autoComplete="off"
                        fieldId="user_password"
                        helperTextInvalid="Password is mandatory"
                        isRequired={true}
                        label="Password"
                        validated="default"
                      >
                        <GenerateId
                          prefix="pf-random-id-"
                        >
                          <div
                            autoComplete="off"
                            className="pf-c-form__group"
                          >
                            <div
                              className="pf-c-form__group-label"
                            >
                              <label
                                className="pf-c-form__label"
                                htmlFor="user_password"
                              >
                                <span
                                  className="pf-c-form__label-text"
                                >
                                  Password
                                </span>
                                <span
                                  aria-hidden="true"
                                  className="pf-c-form__label-required"
                                >
                                   
                                  *
                                </span>
                              </label>
                               
                            </div>
                            <div
                              className="pf-c-form__group-control"
                            >
                              <TextInput
                                autoComplete="off"
                                autoFocus={true}
                                id="user_password"
                                isRequired={true}
                                name="user[password]"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="password"
                                validated="default"
                                value=""
                              >
                                <TextInputBase
                                  aria-label={null}
                                  autoComplete="off"
                                  autoFocus={true}
                                  className=""
                                  id="user_password"
                                  innerRef={null}
                                  isDisabled={false}
                                  isIconSprite={false}
                                  isLeftTruncated={false}
                                  isReadOnly={false}
                                  isRequired={true}
                                  name="user[password]"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  ouiaSafe={true}
                                  type="password"
                                  validated="default"
                                  value=""
                                >
                                  <input
                                    aria-invalid={false}
                                    aria-label={null}
                                    autoComplete="off"
                                    autoFocus={true}
                                    className="pf-c-form-control"
                                    data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                                    data-ouia-component-type="PF4/TextInput"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    id="user_password"
                                    name="user[password]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={true}
                                    type="password"
                                    value=""
                                  />
                                </TextInputBase>
                              </TextInput>
                            </div>
                          </div>
                        </GenerateId>
                      </FormGroup>
                      <FormGroup
                        autoComplete="off"
                        fieldId="user_password_confirmation"
                        helperTextInvalid="Password confirmation is mandatory"
                        isRequired={true}
                        label="Password confirmation"
                        validated="default"
                      >
                        <GenerateId
                          prefix="pf-random-id-"
                        >
                          <div
                            autoComplete="off"
                            className="pf-c-form__group"
                          >
                            <div
                              className="pf-c-form__group-label"
                            >
                              <label
                                className="pf-c-form__label"
                                htmlFor="user_password_confirmation"
                              >
                                <span
                                  className="pf-c-form__label-text"
                                >
                                  Password confirmation
                                </span>
                                <span
                                  aria-hidden="true"
                                  className="pf-c-form__label-required"
                                >
                                   
                                  *
                                </span>
                              </label>
                               
                            </div>
                            <div
                              className="pf-c-form__group-control"
                            >
                              <TextInput
                                autoComplete="off"
                                id="user_password_confirmation"
                                isRequired={true}
                                name="user[password_confirmation]"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="password"
                                validated="default"
                                value=""
                              >
                                <TextInputBase
                                  aria-label={null}
                                  autoComplete="off"
                                  className=""
                                  id="user_password_confirmation"
                                  innerRef={null}
                                  isDisabled={false}
                                  isIconSprite={false}
                                  isLeftTruncated={false}
                                  isReadOnly={false}
                                  isRequired={true}
                                  name="user[password_confirmation]"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  ouiaSafe={true}
                                  type="password"
                                  validated="default"
                                  value=""
                                >
                                  <input
                                    aria-invalid={false}
                                    aria-label={null}
                                    autoComplete="off"
                                    className="pf-c-form-control"
                                    data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                                    data-ouia-component-type="PF4/TextInput"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    id="user_password_confirmation"
                                    name="user[password_confirmation]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={true}
                                    type="password"
                                    value=""
                                  />
                                </TextInputBase>
                              </TextInput>
                            </div>
                          </div>
                        </GenerateId>
                      </FormGroup>
                      <input
                        id="password_reset_token"
                        name="password_reset_token"
                        type="hidden"
                        value="foo"
                      />
                      <ActionGroup>
                        <div
                          className="pf-c-form__group pf-m-action"
                        >
                          <div
                            className="pf-c-form__group-control"
                          >
                            <div
                              className="pf-c-form__actions"
                            >
                              <Button
                                isBlock={true}
                                isDisabled={true}
                                type="submit"
                                variant="primary"
                              >
                                <ButtonBase
                                  innerRef={null}
                                  isBlock={true}
                                  isDisabled={true}
                                  type="submit"
                                  variant="primary"
                                >
                                  <button
                                    aria-disabled={true}
                                    aria-label={null}
                                    className="pf-c-button pf-m-primary pf-m-block pf-m-disabled"
                                    data-ouia-component-id="OUIA-Generated-Button-primary-2"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={true}
                                    role={null}
                                    tabIndex={null}
                                    type="submit"
                                  >
                                    Change Password
                                  </button>
                                </ButtonBase>
                              </Button>
                            </div>
                          </div>
                        </div>
                      </ActionGroup>
                    </form>
                  </FormBase>
                </Form>
              </div>
            </LoginMainBody>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</ChangePasswordPage>
`;
